--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </head>
 <body>
   <div class="card">
-    <h1>𝕿𝖍𝖔𝖒𝖐𝖆𝖞 𝕾𝖈𝖎𝖊𝖓𝖙𝖎𝖋𝖎𝖈 𝕳𝖚𝖇</h1>
+    <h1>𝑻𝑯𝑶𝑴𝑲𝑨𝒀 𝑺𝑪𝑰𝑬𝑵𝑻𝑰𝑭𝑰𝑪 𝑯𝑼𝑩</h1>
     <p>(Subsidary Thinking Global Services)</p>
     
     <p>Science Teacher : Daystar Royal College.</p>
